--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "http-proxy-middleware": "^0.19.1",
     "materialize-css": "^1.0.0-rc.2",
     "react": "^17.0.1",
+    "react-contenteditable": "^3.3.5",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
